# rsensor

./: .gitignore  Cargo.toml  LICENSE.md  PKGBUILD  README.md  cargo-sources.json  org.tahuffman1s.rsensor.appdata.xml  org.tahuffman1s.rsensor.desktop  org.tahuffman1s.rsensor.yml  rsensor.install
src/: common.rs  main.rs
src/renderer/: core.rs
src/stats/: cpu.rs  gpu.rs  mem.rs  mod.rs
