[package]
name = "rsensor"
version = "0.1.0"
edition = "2021"
description = "Monitor System statistics"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tahuffman1s/rsensor"
keywords = ["rsensor", "sensor"]
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
sysinfo = "0.33.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
byte-unit = "5.1.6"
ctrlc = "3.4.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
